# m3b1-learning-from-database

./: .env.sample  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: main.py
src/data_orm/api/: main.py
src/data_orm/api/infrastructure/: dependencies.py
src/data_orm/api/persons/models/: models.py
src/data_orm/api/persons/routers/: person.py
src/data_orm/api/persons/services/: person.py
src/data_orm/config/: config.py  logger.py  parse_and_convert_utils.py
src/data_orm/core/pipeline/: anonymizer.py  data_anonymizer.py  data_cleaner.py  data_cleaner_processor.py  data_loader.py  data_normalizer.py  data_relevance_filter.py  data_saver.py  final_analyzer.py  normalizer_standardizer.py  outlier_detection.py  outlier_detector.py  pipeline_context.py  statistical_analyzer.py  statistizer.py
src/data_orm/core/ports/: processor_chain.py
src/data_orm/domain/: area.py  family_situation.py  person.py  study_level.py
src/data_orm/infrastructure/: database.py  file_manager.py  pipeline_orchestrator.py
src/data_orm/infrastructure/services/: data_loader.py
