[project]
name = "credit-analysis-api"
version = "0.1.0"
description = "API FastAPI pour l'analyse de crédit"
authors = [
    {name = "dacodemaniak", email = "jla.webprojet@gmail.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "loguru>=0.7.0",
    "pydantic",
    "httpx"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_orm*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]